# solvaTask/src/main/kotlin/com/example/solvatask/controller/TransactionController.kt
@@ -1,8 +1,8 @@
 package com.example.solvatask.controller
 
-import com.example.solvatask.error.dto.InvalidData
-import com.example.solvatask.request.CreateTransactionRequestDto
-import com.example.solvatask.response.CreateTransactionResponseDto
+import com.example.solvatask.error.dto.InvalidDataException
+import com.example.solvatask.dto.CreateTransactionRequestDto
+import com.example.solvatask.dto.CreateTransactionResponseDto
 import com.example.solvatask.service.TransactionService
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.*
@@ -14,10 +14,9 @@ class TransactionController(val transactionService: TransactionService) {
     @PostMapping("/")
     fun createTransaction(@RequestBody transactionRequest: CreateTransactionRequestDto)
             : ResponseEntity<CreateTransactionResponseDto> {
-        require(!transactionRequest.accountFrom.isNullOrBlank()) { throw InvalidData() }
-        requireNotNull(transactionRequest.sum) { throw InvalidData() }
-        requireNotNull(transactionRequest.currencyShortcode) { throw InvalidData() }
-        requireNotNull(transactionRequest.expenseCategory) { throw InvalidData() }
+        require(!transactionRequest.accountFrom.isNullOrBlank()) {
+            throw InvalidDataException.throwWithMessage("BankAccount mustn't be null or empty")
+        }
         return ResponseEntity.ok(transactionService.createTransaction(transactionRequest))
     }
 
@@ -25,5 +24,11 @@ class TransactionController(val transactionService: TransactionService) {
     fun getTransactionsExceed(@PathVariable bankAccount: String)
             : ResponseEntity<List<CreateTransactionResponseDto>>? {
         return ResponseEntity.ok(transactionService.getTransactionsExceed(bankAccount))
+    }
+
+    @GetMapping("/exceeded/usd/{bankAccount}")
+    fun getTransactionsAsync(@PathVariable bankAccount: String)
+            : ResponseEntity<List<CreateTransactionResponseDto>> {
+        return ResponseEntity.ok(transactionService.getTransactionsExceedInUSD(bankAccount).join())
     }
 }
